apps/gpu/jupyter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      containers:
      - name: jupyter
        image: gotkrypto/gpu-jupyter:latest
        ports:
        - containerPort: 8888
        resources:
          limits:
            memory: "20Gi"
            cpu: "12000m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
          privileged: true
        volumeMounts:
        - name: jupyter-config
          mountPath: /app
        - name: ssd-storage
          mountPath: /app/ssd
      volumes:
      - name: jupyter-config
        hostPath:
          path: /opt/kubernetes/jupyter/app
          type: 'DirectoryOrCreate'
      - name: ssd-storage
        nfs:
          server: "10.0.20.3"
          path: /mnt/ssd/kubernetes/jupyter
      tolerations:
      - key: nvidia.com/gpu
        operator: Exists
        effect: NoSchedule
