apps/gpu/jupyter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
spec:
  selector:
    app: jupyter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: ClusterIP
