apps/gpu/jupyter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # hajimari.io/enable: "true"
    # hajimari.io/icon: "weather-sunset"
    traefik.ingress.kubernetes.io/router.entrypoints: web
  namespace: gpu
  name: &appname jupyter
spec:
  rules:
  - host: jupyter.k8s.maxwlang.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: *appname
            port:
              number: 80
